
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int AF_INET ;
 int IPPROTO_RAW ;
 int SOCK_RAW ;
 int SOL_SOCKET ;
 int SO_BROADCAST ;
 int perror (char*) ;
 scalar_t__ setsockopt (int,int ,int ,void*,int) ;
 int socket (int ,int ,int ) ;

int init_socket_IP4(int broadcast) {
    int sfd;
    int t=1;

    if ((sfd=socket(AF_INET,SOCK_RAW,IPPROTO_RAW))<0) {
        perror("socket()");
        return(-1);
    }


    if (broadcast) {
        if (setsockopt(
                    sfd,SOL_SOCKET,SO_BROADCAST,
                    (void *)&t,sizeof(int)) != 0) {
            perror("setsockopt");
            return (-1);
        }
    }
    return sfd;
}
